# StarryEngine

./: CMakeLists.txt
scripts/: setup_dev_env.bat
src/editor/: CMakeLists.txt
src/editor/src/: main.cpp
src/libs/WinExport/: WinExport.h
src/libs/slog/: CMakeLists.txt
src/libs/slog/include/slog/: slog.h
src/libs/slog/src/: slog.cpp
